<resources>
    <string name="app_name">TravelHunter</string>

    <string name="welcome">Добро пожаловать!</string>

    <string name="registration">Регистрация</string>

    <string name="sign_in">Войти</string>

    <string name="register">Зарегистрироваться</string>

    <string name="type_password">Введите пароль</string>

    <string name="repeat_password">Повторите пароль</string>

    <string name="type_email">Введите email</string>

    <string name="saved">Избранные</string>

    <string name="flights">Авиабилеты</string>

    <string name="hotels">Отели</string>

    <string name="settings">Настройки</string>

    <string name="city_from">Откуда</string>

    <string name="city_to">Куда</string>

    <string name="date_to">+ Добавить прямой рейс</string>

    <string name="date_from">+ Добавить обратный рейс</string>

    <string name="search_flights">Найти билеты</string>

    <string name="search_hotels">Найти отели</string>

    <string name="date_in">+ Добавить дату регистрации</string>

    <string name="where">+ Добавить город</string>

    <string name="guests">Указать количество человек</string>

    <string name="edit_profile">Редактировать</string>

    <string name="type_name">Ведите Ваше имя</string>

    <string name="type_surname">Введите Вашу фамилию</string>

    <string name="change_password">Изменить пароль</string>

    <string name="save_password">Сохранить пароль</string>

    <string name="change_background">Изменить фон</string>

    <string name="delete_account">Удалить профиль</string>

    <string name="no_saves">Список избранных пуст</string>

    <string name="no_flights">Список авиабилетов пуст</string>

    <string name="no_hotels">Список отелей пуст</string>

    <string name="change_data">Изменить данные</string>

    <string name="type_url">Введите ссылку на изображение</string>

    <string name="test_price">10000₽</string>

    <string name="test_iata">MOW-AER</string>

    <string name="departure">Отправка:</string>

    <string name="arrival">Возврат:</string>

    <string name="test_time">17:45\n2024-06-03</string>

    <string name="test_label">Отель Сочи</string>

    <string name="test_location">Россия, Сочи</string>

    <string name="test_total_score">300000₽</string>

    <string name="test_night_score">10000₽ за ночь</string>

    <string name="restart">Нажмите, чтобы перезапустить</string>

</resources>