<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Hotels">


    <androidx.cardview.widget.CardView
        android:id="@+id/hotels_find_place_card"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        app:cardBackgroundColor="@color/dark_blue"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/default_card_elevation"
        app:layout_constraintBottom_toTopOf="@+id/hotels_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/hotels_city_edit"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_shape"
                android:hint="@string/where"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/hotels_in_date"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                app:cardBackgroundColor="@color/white_80"
                app:cardCornerRadius="15dp"
                app:cardElevation="@dimen/default_card_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotels_city_edit">

                <TextView
                    android:id="@+id/hotels_to_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:hint="@string/date_in"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/hotels_guests_edit"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_shape"
                android:hint="@string/guests"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotels_in_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/hotels_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/white_50"
        android:text="@string/search_hotels"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/main_separate_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotels_find_place_card" />

    <View
        android:id="@+id/main_separate_line"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/edit_shape"
        android:backgroundTint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>