<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea_wave_wallpaper"
    tools:context=".fragments.MainSettings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:overScrollMode="always"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >



            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                app:cardElevation="@dimen/default_card_elevation"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/main_settings_account_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/account" />


            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/main_settings_type_name"
                android:layout_width="300dp"
                android:layout_height="@dimen/settings_card_height"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_shape"
                android:hint="@string/type_name"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"/>


            <EditText
                android:id="@+id/main_settings_type_surname"
                android:layout_width="300dp"
                android:layout_height="@dimen/settings_card_height"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_shape"
                android:hint="@string/type_surname"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_settings_type_name" />


            <EditText
                android:id="@+id/main_settings_type_email"
                android:layout_width="300dp"
                android:layout_height="@dimen/settings_card_height"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_shape"
                android:hint="@string/type_email"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_settings_type_surname" />


            <View
                android:id="@+id/separate_line_1"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginStart="@dimen/separate_line_side_margin"
                android:layout_marginTop="@dimen/separate_line_top_margin"
                android:layout_marginEnd="@dimen/separate_line_side_margin"
                android:background="@drawable/edit_shape"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_settings_type_email" />


            <EditText
                android:id="@+id/main_settings_type_password"
                android:layout_width="300dp"
                android:layout_height="@dimen/settings_card_height"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_shape"
                android:backgroundTint="@color/white_50"
                android:hint="@string/type_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separate_line_1" />


            <EditText
                android:id="@+id/main_settings_repeat_password"
                android:layout_width="300dp"
                android:layout_height="@dimen/settings_card_height"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_shape"
                android:backgroundTint="@color/white_50"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_settings_type_password" />


            <Button
                android:id="@+id/main_settings_password_edit_button"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white_50"
                android:text="@string/change_password"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_settings_repeat_password" />


            <View
                android:id="@+id/separate_line_2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginStart="@dimen/separate_line_side_margin"
                android:layout_marginTop="@dimen/separate_line_top_margin"
                android:layout_marginEnd="@dimen/separate_line_side_margin"
                android:background="@drawable/edit_shape"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_settings_password_edit_button" />


            <androidx.cardview.widget.CardView
                android:id="@+id/background_CardView"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                app:cardBackgroundColor="@color/dark_blue"
                app:cardCornerRadius="15dp"
                app:cardMaxElevation="@dimen/default_card_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separate_line_2" >


                <ImageView
                    android:id="@+id/main_settings_recent_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/sea_wave_wallpaper"
                    android:scaleType="fitXY"
                    android:layout_margin="10dp"/>

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/main_settings_change_background_button"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/white_50"
                android:text="@string/change_background"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/background_CardView" />


            <View
                android:id="@+id/separate_line_3"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="@dimen/separate_line_top_margin"
                android:layout_marginEnd="@dimen/separate_line_side_margin"
                android:layout_marginStart="@dimen/separate_line_side_margin"
                android:background="@drawable/edit_shape"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_settings_change_background_button" />


            <Button
                android:id="@+id/main_settings_delete_account_button"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/white_50"
                android:text="@string/delete_account"
                android:textColor="@color/log_out_btn"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separate_line_3" />


            <View
                android:id="@+id/lower_limit"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="@dimen/lower_limit_top_margin"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_settings_delete_account_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>